# hwin-net

./: .gitignore  Benchmark_Report.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FINAL_VALIDATION_REPORT.md  HANDOFF_SUMMARY.md  LICENSE  Minimal_Repair_List.md  README.md  REPAIR_SUMMARY.md  REPRODUCIBILITY_MANIFEST.md  Registered_Experiment.json  Registered_Experiment.md  Repository_Audit.md  Root_Cause_Analysis.md  SCIENTIFIC_VALIDATION_REPORT.json  SECURITY.md  Scientific_Recovery_Report.md  build_m6.py  debug_train.py  debug_train2.py  debug_train3.py  debug_train4.py  debug_train5.py  debug_train6.py  decode_b64.py  decode_ds.py  fix_gate.py  fix_pca.py  fix_plateau.py  gen_m6.py  lightning_setup.sh  no_leakage_b64.txt  patch_trainer.py  pyproject.toml  reproducibility_manifest.json  requirements-dev.txt  requirements.txt  (+16 more)
configs/: config.yaml  config_small.yaml  config_small_log1p.yaml  config_small_robust.yaml  config_test.yaml  hydra_config.yaml
datasets/: dataset.py  dataset.py.b64  dataset.py.bak  dataset_backup.py  schema_sampler.py
inference/: inference.py
losses/: equivariance_loss.py  noleak_loss.py  total_loss.py
models/: hwin_net.py  identifiability_gate.py.backup2  no_leakage.py  query_head.b64  query_head.py  recovery_module.py  schema_encoder.py.backup  test_b64.py  test_write.py
outputs_ablation_all/: ablation_results.json
outputs_full_seed456/: metrics.json
outputs_full_seed789/: metrics.json
outputs_minimal_seed456/: metrics.json
outputs_minimal_seed789/: metrics.json
outputs_test/: metrics.json
(+80 files in other folders)
